# api/docs/swagger.json
@@ -157,7 +157,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/responses.TokenResponse"
+                            "$ref": "#/definitions/responses.TokenResponseWithStatus"
                         }
                     }
                 }
@@ -220,9 +220,6 @@
                 "expiryTime": {
                     "type": "integer"
                 },
-                "message": {
-                    "type": "string"
-                },
                 "scanRef": {
                     "type": "string"
                 },
@@ -231,6 +228,20 @@
                 },
                 "tokenType": {
                     "type": "string"
+                }
+            }
+        },
+        "responses.TokenResponseWithStatus": {
+            "type": "object",
+            "properties": {
+                "is_new_token": {
+                    "type": "boolean"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "token": {
+                    "$ref": "#/definitions/responses.TokenResponse"
                 }
             }
         },
