# internal/responses/responses.go
@@ -16,8 +16,13 @@ func SuccessResponse(c *fiber.Ctx, statusCode int, data interface{}, message str
 	})
 }
 
+type TokenResponseWithStatus struct {
+	Token      *TokenResponse `json:"token"`
+	IsNewToken bool           `json:"is_new_token"`
+	Message    string         `json:"message"`
+}
+
 type TokenResponse struct {
-	Message       string `json:"message"`
 	AuthToken     string `json:"authToken"`
 	ScanRef       string `json:"scanRef"`
 	ClientID      string `json:"clientId"`
